--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Put things on lists.",
   "main": "index.html",
   "scripts": {
-    "dev": "npx @11ty/eleventy-dev-server",
+    "dev": "eleventy-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/marek-saji/listy/issues"
   },
-  "homepage": "https://github.com/marek-saji/listy#readme"
+  "homepage": "https://github.com/marek-saji/listy#readme",
+  "devDependencies": {
+    "@11ty/eleventy": "latest"
+  }
 }
